[workspace]

members = [
  # Libraries
  "dcb-bytes",
  "dcb-bytes-derive",
  "dcb-drv",
  "dcb-pak",
  "dcb-msd",
  "dcb-card-table",
  "dcb-deck-table",
  "dcb-cdrom-xa", #
  # Binaries
  "dcb-mkdrv",
  "dcb-mkdrv-deps",
  "dcb-undrv",
  "dcb-unbin",
  "dcb-unpak",
  "dcb-mkpak",
  "dcb-mkpak-deps",
  "dcb-unmsd",
  "dcb-un-card-table",
]

[patch."https://github.com/Zenithsiz/zutil"]
zutil = {path = "../../zutil"}
