[workspace]

members = [
  # Libraries
  "dcb-bytes",
  "dcb-bytes-derive",
  "dcb-drv",
  "dcb-pak",
  "dcb-msd",
  "dcb-card-table",
  "dcb-deck-table",
  "dcb-cdrom-xa", #
  # Binaries
  "dcb-mkdrv",
  "dcb-mkdrv-deps",
  "dcb-undrv",
  "dcb-unbin",
  "dcb-unpak",
  "dcb-mkpak",
  "dcb-mkpak-deps",
  "dcb-mkmsd",
  "dcb-unmsd",
  "dcb-mkarc",
  "dcb-mkarc-deps",
  "dcb-unarc",
  "dcb-untim",
  "dcb-un-card-table",
  "dcb-mk-card-table",
  "dcb-un-deck-table",
  "dcb-mk-deck-table",
  "dcb-mkpsexe",
]

[patch."https://github.com/Zenithsiz/zutil"]
zutil = {path = "../../zutil"}
