[workspace]

members = [
  # Helpers
  "dcb-bytes",
  "dcb-bytes-derive",
  "dcb-logger",


  # Card table / Deck table
  "dcb-card-table",
  "dcb-deck-table",
  "dcb-mk-card-table",
  "dcb-mk-deck-table",
  "dcb-un-card-table",
  "dcb-un-deck-table",


  # Cd
  "dcb-cdrom-xa",
  "dcb-unbin",


  # Drv
  "dcb-drv",
  "dcb-mkdrv",
  "dcb-mkdrv-deps",
  "dcb-undrv",


  # Arc
  "dcb-mkarc",
  "dcb-mkarc-deps",
  "dcb-unarc",


  # Msd
  "dcb-msd",
  "dcb-mkmsd",
  "dcb-unmsd",


  # Pak
  "dcb-pak",
  "dcb-mkpak",
  "dcb-mkpak-deps",
  "dcb-unpak",


  # Psexe
  "dcb-mkpsexe",


  # Tim
  "dcb-tim",
  "dcb-mktim",
  "dcb-mktim-deps",
  "dcb-untim",


  # Tis
  "dcb-mktis",
  "dcb-mktis-deps",
  "dcb-untis",


  # Others
  "dcb-bspatch",
]

[patch."https://github.com/Zenithsiz/zutil"]
zutil = { path = "../../zutil" }
