[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-cdrom-xa"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "6778fdcb86dfc367429127840dac355c6fb8b54c"}

# Log
bitflags = "1.3.2"
log = "0.4.17"

# Util
byteorder = "1.4.3"

# Derives
thiserror = "1.0.37"
