[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-deck-table"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-bytes-derive = {path = "../dcb-bytes-derive"}

# Log
tracing = "0.1.37"

# Util
ascii = {version = "1.1.0", features = ["serde"]}
byteorder = "1.4.3"
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "6778fdcb86dfc367429127840dac355c6fb8b54c", features = ["use_serde"]}

# Serde
serde = {version = "1.0.145", features = ["derive"]}

# Derives
derive_more = "0.99.17"
ref-cast = "1.0.10"
strum = {version = "0.24.1", features = ["derive"]}
thiserror = "1.0.37"
