[package]
edition = "2018"
name = "dcb-drv"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Log
log = "0.4.13"

# Util
ascii = "1.0.0"
byteorder = "1.4.2"
chrono = {version = "0.4.19", features = ["serde"]}
filetime = "0.2.14"
ref-cast = "1.0.6"

# Derives
thiserror = "1.0.23"

# Serde
serde = {version = "1.0.136", features = ["derive"]}
serde_with = "1.12.0"
