[package]
edition = "2018"
name = "dcb-drv"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "6778fdcb86dfc367429127840dac355c6fb8b54c"}

# Log
log = "0.4.17"

# Util
ascii = "1.1.0"
byteorder = "1.4.3"
chrono = {version = "0.4.22", features = ["serde"]}
filetime = "0.2.17"
ref-cast = "1.0.10"

# Derives
thiserror = "1.0.37"

# Serde
serde = {version = "1.0.145", features = ["derive"]}
serde_with = "2.0.1"
