[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-mk-card-table"
version = "0.1.5"

[dependencies]
# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-card-table = { path = "../dcb-card-table" }
dcb-cdrom-xa = { path = "../dcb-cdrom-xa" }
dcb-logger = { path = "../dcb-logger" }

# Logging
tracing = "0.1.37"

# Error
anyhow = "1.0.65"

# Cmd
clap = { version = "4.0.11", features = ["derive"] }

# Serde
serde_json = "1.0.86"

# Util
itertools = "0.10.5"
zutil = { git = "https://github.com/Zenithsiz/zutil", features = [
  "use_serde",
], rev = "6778fdcb86dfc367429127840dac355c6fb8b54c" }
