[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-mk-deck-table"
version = "0.1.5"

[dependencies]
# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-cdrom-xa = {path = "../dcb-cdrom-xa"}
dcb-deck-table = {path = "../dcb-deck-table"}

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error
anyhow = "1.0.40"

# Cmd
clap = {version = "3.1.2", features = ["derive"]}

# Serde
serde_json = "1.0.66"

# Util
itertools = "0.10.3"
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "6778fdcb86dfc367429127840dac355c6fb8b54c"}
