[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-mk-deck-table"
version = "0.1.5"

[dependencies]
# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-cdrom-xa = {path = "../dcb-cdrom-xa"}
dcb-deck-table = {path = "../dcb-deck-table"}

# Logging
log = "0.4.17"
simplelog = "0.12.0"

# Error
anyhow = "1.0.65"

# Cmd
clap = {version = "4.0.11", features = ["derive"]}

# Serde
serde_json = "1.0.86"

# Util
itertools = "0.10.5"
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "6778fdcb86dfc367429127840dac355c6fb8b54c"}
