[package]
edition = "2021"
name = "dcb-mkdrv-deps"
version = "0.1.0"

[dependencies]
# Dcb
dcb-mkdrv = {path = "../dcb-mkdrv"}

# Util
chrono = {version = "0.4.22", features = ["serde"]}
itertools = "0.10.3"
size_format = "1.0.2"
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Cmd
clap = {version = "3.2.17", features = ["derive"]}

# Logging
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}

# Error handling
anyhow = "1.0.61"
thiserror = "1.0.32"

# Serde
serde = {version = "1.0.143", features = ["derive"]}
serde_yaml = "0.9.9"
