[package]
edition = "2021"
name = "dcb-mkdrv"
version = "0.1.0"

[dependencies]
# Dcb
dcb-drv = {path = "../dcb-drv"}

# Util
chrono = {version = "0.4.19", features = ["serde"]}
itertools = "0.10.0"
size_format = "1.0.2"
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Cmd
clap = {version = "3.1.2", features = ["derive"]}

# Logging
log = "0.4.13"
simplelog = "0.11.2"

# Error handling
anyhow = "1.0.38"
thiserror = "1.0.23"

# Serde
serde = {version = "1.0.136", features = ["derive"]}
serde_yaml = "0.8.23"
