[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-mkpak"
version = "0.1.0"

[dependencies]
# Dcb
dcb-pak = {path = "../dcb-pak"}

# Cmd
clap = {version = "3.2.17", features = ["derive"]}

# Logging
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}

# Error handling
anyhow = "1.0.61"

# Util
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "6778fdcb86dfc367429127840dac355c6fb8b54c", features = ["use_serde"]}

# Serde
serde = {version = "1.0.143", features = ["derive"]}
serde_yaml = "0.9.9"
