[package]
edition = "2021"
name = "dcb-mkpsexe"
version = "0.1.0"

[dependencies]

# Cmd
clap = {version = "3.2.17", features = ["derive"]}

# Logging
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}

# Error handling
anyhow = "1.0.61"

# Elf
goblin = "0.5.4"

# Util
byteorder = "1.4.3"
