[package]
edition = "2021"
name = "dcb-mkpsexe"
version = "0.1.0"

[dependencies]

# Cmd
clap = {version = "4.0.11", features = ["derive"]}

# Logging
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}

# Error handling
anyhow = "1.0.65"

# Elf
goblin = "0.5.4"

# Util
byteorder = "1.4.3"
