[package]
edition = "2021"
name = "dcb-mktim-deps"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-logger = { path = "../dcb-logger" }
dcb-tim = { path = "../dcb-tim" }

# Cmd
clap = { version = "4.0.11", features = ["derive"] }

# Logging
tracing = "0.1.37"

# Image
image = "0.24.4"

# Error handling
anyhow = "1.0.65"
thiserror = "1.0.37"

# Util
byteorder = "1.4.3"
hexdump = "0.1.1"
itertools = "0.10.5"
pathdiff = "0.2.1"

# Serde
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
