[package]
edition = "2021"
name = "dcb-mktim"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-tim = {path = "../dcb-tim"}

# Cmd
clap = {version = "3.2.17", features = ["derive"]}

# Logging
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}

# Image
image = "0.24.4"

# Error handling
anyhow = "1.0.61"
thiserror = "1.0.23"

# Util
byteorder = "1.4.3"
hexdump = "0.1.1"
itertools = "0.10.5"
pathdiff = "0.2.1"

# Serde
serde = {version = "1.0.143", features = ["derive"]}
serde_yaml = "0.9.9"
