[package]
edition = "2021"
name = "dcb-mktis"
version = "0.1.0"

[dependencies]

# Cmd
clap = {version = "4.0.11", features = ["derive"]}

# Logging
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}

# Error handling
anyhow = "1.0.65"

# Util
byteorder = "1.4.3"
hexdump = "0.1.1"

# Serde
serde = {version = "1.0.145", features = ["derive"]}
serde_yaml = "0.9.13"
