[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2021"
name = "dcb-msd"
version = "0.1.0"

[dependencies]

# Logging
tracing = "0.1.36"

# Error handling
anyhow = "1.0.61"
thiserror = "1.0.26"

# Utility
byteorder = "1.4.3"
dbg_hex = "0.1.1"
derive_more = "0.99.16"
itertools = "0.10.0"
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Strings
encoding_rs = "0.8.28"
logos = "0.12.1"
snailquote = "0.3.1"

# Serde
serde = {version = "1.0.127", features = ["derive"]}
