[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2021"
name = "dcb-msd"
version = "0.1.0"

[dependencies]

# Logging
tracing = "0.1.37"

# Error handling
anyhow = "1.0.65"
thiserror = "1.0.37"

# Utility
byteorder = "1.4.3"
dbg_hex = "0.1.1"
derive_more = "0.99.17"
itertools = "0.10.5"
zutil = { git = "https://github.com/Zenithsiz/zutil", rev = "6778fdcb86dfc367429127840dac355c6fb8b54c" }

# Strings
encoding_rs = "0.8.31"
logos = "0.12.1"
snailquote = "0.3.1"

# Serde
serde = { version = "1.0.145", features = ["derive"] }
