[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-pak"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "6778fdcb86dfc367429127840dac355c6fb8b54c"}

# Error handling
anyhow = "1.0.38"

# Derives
thiserror = "1.0.23"
