[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-un-card-table"
version = "0.1.5"

[dependencies]
# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-card-table = {path = "../dcb-card-table"}
dcb-cdrom-xa = {path = "../dcb-cdrom-xa"}

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error
anyhow = "1.0.40"

# Cmd
clap = {version = "3.1.2", features = ["derive"]}

# Serde
serde_json = "1.0.66"

# Util
itertools = "0.10.3"
