[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-unbin"
version = "0.1.0"

[dependencies]

# Dcb
dcb-cdrom-xa = {path = "../dcb-cdrom-xa"}

# Cmd
clap = "4.0.11"

# Logging
log = "0.4.17"
simplelog = "0.12.0"

# Error handling
anyhow = "1.0.65"
