[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-unbin"
version = "0.1.0"

[dependencies]

# Dcb
dcb-cdrom-xa = { path = "../dcb-cdrom-xa" }
dcb-logger = { path = "../dcb-logger" }

# Cmd
clap = "4.0.11"

# Logging
tracing = "0.1.37"

# Error handling
anyhow = "1.0.65"
