[package]
edition = "2018"
name = "dcb-undrv"
version = "0.1.0"

[dependencies]
# Dcb
dcb-drv = {path = "../dcb-drv"}

# Util
chrono = {version = "0.4.19", features = ["serde"]}
filetime = "0.2.14"
itertools = "0.10.3"
size_format = "1.0.2"
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["use_serde"], rev = "6778fdcb86dfc367429127840dac355c6fb8b54c"}

# Cmd
clap = {version = "3.1.2", features = ["derive"]}

# Logging
log = "0.4.14"
simplelog = "0.11.2"

# Error handling
anyhow = "1.0.38"

# Serde
serde = {version = "1.0.136", features = ["derive"]}
serde_yaml = "0.8.23"
