[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-unmsd"
version = "0.1.0"

[dependencies]
# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-msd = {path = "../dcb-msd"}

# Cmd
clap = {version = "3.1.2", features = ["derive"]}

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"

# Utility
byteorder = "1.4.3"
dbg_hex = "0.1.1"
itertools = "0.10.0"
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Strings
encoding_rs = "0.8.28"

# Serde
serde_yaml = "0.8.17"
